[package]
name = "oop-macro"
description = "Macros for the oop package"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["default", "full"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
